# circuitree-paper

./: .gitignore  README.md  environment.yml  pyproject.toml  render.yaml
binary_tree/: binary_tree.py
dimerization/: dimerization.py  models.py
oscillation/: analyze_bootstrap_best_oscillators.py  analyze_bootstrap_oscillations.py  analyze_mcts_aggregated_by_batchsize.py  analyze_merge_search_graphs.py  analyze_motifs_by_enumeration.py  analyze_motifs_exhaustive.py  analyze_motifs_in_bootstrap_samples.py  analyze_motifs_in_search.py  analyze_motifs_in_search_graph.py  analyze_motifs_in_search_replicates.py  analyze_oscillation_motifs.py  analyze_oscillator_frequencies.py  analyze_oscillator_pdist.py  analyze_search_patterns.py  analyze_search_patterns_exhaustive.py  analyze_search_patterns_in_replicates.py  celeryconfig.py  generate_complexity_graph.py  generate_consolidated_extras.py  generate_genotype_queue.py  generate_param_queue.py  generate_param_sets.py  generate_param_sets_asymm.py  gillespie.py  graph_utils.py  hiveplot_3tf_dag.py  make_Q_table.py  oscillation.py  oscillation_app.py  oscillation_local_celery.py  oscillation_multithreaded.py  oscillation_parallel.py  oscillation_parallel_celery.py  oscillation_parallel_dask.py  plot_3tf_dag.py  plot_Q_vs_samples.py  plot_acf_extrema.py  plot_acf_extrema_single.py  plot_ai_suppressor_comparison.py  plot_ai_variations.py  (+73 more)
polarization/: .plot_polarization_dag.py.swp  plot_mcts_batchsize.py  plot_mcts_bfs.py  plot_mcts_vs_exploration.py  plot_polarization_dag.py  test_modularity.py
(+24 files in other folders)
