[tool.poetry]
name = "circuitree-paper"
version = "0.1.0"
description = ""
authors = ["pranav-bhamidipati <pbhamidi@usc.edu>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.0"
networkx = "^3.1"
scipy = { python = ">=3.10,<3.12", version = "^1.11.1" }
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "^2.0.3"
more-itertools = "^10.1.0"
h5py = "^3.9.0"
tqdm = "^4.65.1"
psutil = "^5.9.5"
numba = "^0.57.1"
datashader = "^0.15.1"
matplotlib-venn = "^0.11.9"
ray = "^2.6.2"
dask = "^2023.8.0"
tables = "^3.8.0"
pyarrow = "^12.0.1"
circuitree = "^0.6.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ipython = "^8.14.0"
line-profiler = "^4.0.3"
fastapi = "^0.101.0"
ipykernel = "^6.25.1"
jupyterlab = "^4.0.4"
ipywidgets = "^8.1.0"
nodejs = "^0.1.1"
ipympl = "^0.9.3"
dask-labextension = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
